bebytes/tests/compile_time/unsupported_isize.stderr
error: Unsupported type for U8 attribute
  --> tests/compile_time/unsupported_isize.rs:14:13
   |
14 |     second: isize,
   |             ^^^^^

error: Unsupported type
  --> tests/compile_time/unsupported_isize.rs:14:13
   |
14 |     second: isize,
   |             ^^^^^

error: Type not supported'
  --> tests/compile_time/unsupported_isize.rs:14:13
   |
14 |     second: isize,
   |             ^^^^^
